--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
         title: "Le Costituzioni abrogate (e non)",
         image: "carloalberto.jpg",
         details:
-          "Il fallimento dei moti del 1848 fece abrogare le Costituzioni concesse, tranne lo Statuto Albertino. Pio IX a Roma riprese la politica conservatrice, mentre Ferdinando II attuò una dura repressione nel Regno delle Due Sicilie. Nel Lombardo-Veneto fu inviato il generale austriaco Radetzki in occupazione militare. <br> Nel Regno di Sardegna, Vittorio Emanuele II non revocò lo Statuto Albertino. Affidò il governo a Massimo d'Azeglio e il ministro della Giustizia con le leggi Siccardi, pose fine ad alcuni privilegi della Chiesa: diritto del clero di essere giudicato dal foro ecclesiastico; diritto di asilo per chi si trovava in luoghi sacri.",
+          "Il fallimento dei moti del 1848 fece abrogare le Costituzioni concesse, tranne lo Statuto Albertino. Pio IX a Roma riprese la politica conservatrice, mentre Ferdinando II attuò una dura repressione nel Regno delle Due Sicilie. Nel Lombardo-Veneto fu inviato il generale austriaco Radetzki in occupazione militare. <br> Nel Regno di Sardegna, Vittorio Emanuele II non revocò lo Statuto Albertino. Affidò il governo a Massimo d'Azeglio, e il ministro della Giustizia con le leggi Siccardi pose fine ad alcuni privilegi della Chiesa: diritto del clero di essere giudicato dal foro ecclesiastico; diritto di asilo per chi si trovava in luoghi sacri.",
       },
       {
         id: "2",
         title: "Camillo Benso, Conte di Cavour",
         image: "benson.jpg",
         details:
-          "Appartenente all'aristocrazia piemontese. Tornato da viaggi in Inghilterra, Francia, Germania e Svizzera, introdusse nuove tecniche di coltivazione. Nel 1848 venne eletto deputato, nel 1850 ministro dell'agricoltura e nel 1852 presidente del Consiglio. <br> Grazie ad un accordo con Urbano Rattazzi, leader dell'opposizione, portando alla nascita di una politica di centro. <br> Il re in contrapposizione con lo Statuto Albertino, su volontà del Parlamento affidò il governo a Cavour, sostituì d'Azeglio e prese come modello lo Stato di Gran Bretagna. Liberista in economia, favorì l'agricoltura e fece crescere l'economia abbassando i dazi doganali, ampliando il porto di Genova e la rete dei trasporti.",
+          "Appartenente all'aristocrazia piemontese. Tornato da viaggi in Inghilterra, Francia, Germania e Svizzera, introdusse nuove tecniche di coltivazione. Nel 1848 venne eletto deputato, nel 1850 ministro dell'agricoltura e nel 1852 presidente del Consiglio. <br> Grazie ad un accordo con Urbano Rattazzi, leader dell'opposizione, portò alla nascita della politica di centro. <br> Il re, in contrapposizione con lo Statuto Albertino, su volontà del Parlamento affidò il governo a Cavour, che prese come modello lo Stato di Gran Bretagna. Liberista in economia, favorì l'agricoltura e fece crescere l'economia abbassando i dazi doganali, ampliando il porto di Genova e la rete dei trasporti.",
       },
       {
         id: "3",
         title: "La Società Nazionale Italiana",
         image: "pisacane.jpg",
         details:
-          "In 10 anni le riforme di Cavour trasformarono il Piemonte nella regione più evoluta d'Italia. Nel 1857 Cavour ispirò la Società Nazionale Italiana. <br> Si ricorda l'insurrezione attuata da Carlo Pisacane nel giugno 1857 si imbarcò a Genova verso l'isola di Ponza, dove liberò circa 300 detenuti. Giunse a Sapri, dove i contadini repressero la rivolta aiutati dell'esercito borbonico. Dopo questo fallimento Pisacane si suicidò.",
+          "In 10 anni le riforme di Cavour trasformarono il Piemonte nella regione più evoluta d'Italia. Nel 1857 Cavour ispirò la Società Nazionale Italiana. <br> Si ricorda l'insurrezione attuata da Carlo Pisacane nel giugno 1857 quando si imbarcò a Genova verso l'isola di Ponza, dove liberò circa 300 detenuti. Giunse poi a Sapri, dove i contadini repressero la rivolta aiutando l'esercito borbonico. Dopo questo fallimento Pisacane si suicidò.",
       },
       {
         id: "4",
@@ -76,7 +76,7 @@
         title: "L'Austria cade nella trappola",
         image: "villafranca.jpg",
         details:
-          "Cavour schierò l'esercito ai confini della Lombardia, a cui si aggiunsero volontari di Garibaldi. L'Austria inviò un ultimatum il 23/4 e il 29/4/1859 inziò la seconda guerra d'indipendenza. <br> I franco-piemontesi ottennero numerose vittorie e furono proclamati dei governi provvisori. <br> Napoleone III aveva paura di perdere il controllo della situazione: la guerra non era finita, la Prussia e Russia minacciavano di entrare nel conflitto e l'annessione della Toscana e dell'Emilia non era prevista negli accordi; per questo Napoleone III l'11/7/1859 firmò l'armistizio a Villafranca. <br> Il Veneto rimaneva all'Austria, Cavour annesse Toscana ed Emilia, Emanuele II cedette Nizza e Savoia alla Francia. L'11 e 12/3/1860 furono approvate le annessioni con un plebiscito. La cessione di Nizza provocò comunque proteste.",
+          "Cavour schierò l'esercito ai confini della Lombardia, a cui si aggiunsero volontari di Garibaldi. L'Austria inviò un ultimatum il 23/4 e il 29/4/1859 inziò la seconda guerra d'indipendenza. <br> I franco-piemontesi ottennero numerose vittorie e furono proclamati dei governi provvisori. <br> Napoleone III aveva paura di perdere il controllo della situazione: la guerra non era finita, la Prussia e Russia minacciavano di entrare nel conflitto e l'annessione di Toscana ed Emilia non era prevista negli accordi; per questo Napoleone III l'11/7/1859 firmò l'armistizio a Villafranca. <br> Il Veneto rimaneva all'Austria, Cavour annesse Toscana ed Emilia, Emanuele II cedette Nizza e Savoia alla Francia. L'11 e 12/3/1860 furono approvate le annessioni con un plebiscito. La cessione di Nizza provocò comunque proteste.",
       },
       {
         id: "7",
